tests/enum_into/compile_fail/container/path_attribute.rs
use enum_convert::EnumInto;

#[derive(EnumInto)]
#[enum_into]
enum Source {
    Unit,
}

enum Target {
    Unit,
}

fn main() {}
